Added project management plugins for formatting, linting, styling, dependency version bumps, security updates, etc. Includes all file changes caused during build