@@ -1,19 +1,17 @@
 package io.trishul.object.store.file.model;
 
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URL;
-import java.time.LocalDateTime;
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 import io.trishul.object.store.file.model.dto.AddIaasObjectStoreFileDto;
 import io.trishul.object.store.file.model.dto.IaasObjectStoreFileDto;
 import io.trishul.object.store.file.model.dto.UpdateIaasObjectStoreFileDto;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URL;
+import java.time.LocalDateTime;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class IaasObjectStoreFileMapperTest {
     private IaasObjectStoreFileMapper mapper;
@@ -30,19 +28,19 @@ public class IaasObjectStoreFileMapperTest {
 
     @Test
     public void testToDto_ReturnsDto_WhenPojoIsNotNull() throws MalformedURLException {
-        IaasObjectStoreFile tenant = new IaasObjectStoreFile(
-            URI.create("file.txt"),
-            LocalDateTime.of(2000, 1, 1, 0, 0),
-            new URL("http://localhost/")
-        );
+        IaasObjectStoreFile tenant =
+                new IaasObjectStoreFile(
+                        URI.create("file.txt"),
+                        LocalDateTime.of(2000, 1, 1, 0, 0),
+                        new URL("http://localhost/"));
 
         IaasObjectStoreFileDto dto = mapper.toDto(tenant);
 
-        IaasObjectStoreFileDto expected = new IaasObjectStoreFileDto(
-            URI.create("file.txt"),
-            LocalDateTime.of(2000, 1, 1, 0, 0),
-            new URL("http://localhost/")
-        );
+        IaasObjectStoreFileDto expected =
+                new IaasObjectStoreFileDto(
+                        URI.create("file.txt"),
+                        LocalDateTime.of(2000, 1, 1, 0, 0),
+                        new URL("http://localhost/"));
 
         assertEquals(expected, dto);
     }
@@ -54,18 +52,15 @@ public class IaasObjectStoreFileMapperTest {
 
     @Test
     public void testFromUpdateDto_ReturnsPojo_WhenDtoIsNotNull() throws MalformedURLException {
-        UpdateIaasObjectStoreFileDto dto = new UpdateIaasObjectStoreFileDto(
-            URI.create("file.txt"),
-            LocalDateTime.of(2000, 1, 1, 5, 15)
-        );
+        UpdateIaasObjectStoreFileDto dto =
+                new UpdateIaasObjectStoreFileDto(
+                        URI.create("file.txt"), LocalDateTime.of(2000, 1, 1, 5, 15));
 
         IaasObjectStoreFile tenant = mapper.fromUpdateDto(dto);
 
-        IaasObjectStoreFile expected = new IaasObjectStoreFile(
-            URI.create("file.txt"),
-            LocalDateTime.of(2000, 1, 1, 6, 0),
-            null
-        );
+        IaasObjectStoreFile expected =
+                new IaasObjectStoreFile(
+                        URI.create("file.txt"), LocalDateTime.of(2000, 1, 1, 6, 0), null);
         assertEquals(expected, tenant);
     }
 
@@ -76,17 +71,13 @@ public class IaasObjectStoreFileMapperTest {
 
     @Test
     public void testFromAddDto_ReturnsPojo_WhenDtoIsNotNull() throws MalformedURLException {
-        AddIaasObjectStoreFileDto dto = new AddIaasObjectStoreFileDto(
-            LocalDateTime.of(2000, 1, 1, 5, 15)
-        );
+        AddIaasObjectStoreFileDto dto =
+                new AddIaasObjectStoreFileDto(LocalDateTime.of(2000, 1, 1, 5, 15));
 
         IaasObjectStoreFile tenant = mapper.fromAddDto(dto);
 
-        IaasObjectStoreFile expected = new IaasObjectStoreFile(
-            null,
-            LocalDateTime.of(2000, 1, 1, 6, 0),
-            null
-        );
+        IaasObjectStoreFile expected =
+                new IaasObjectStoreFile(null, LocalDateTime.of(2000, 1, 1, 6, 0), null);
         assertEquals(expected, tenant);
     }
 }
